--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <noscript>
       This is your fallback content in case JavaScript fails to load.
     </noscript>
-    <%= require('./src/app.pug')() %>
+    <%= require('./src/app.pug') %>
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
